--- a/Three Ways/threeways.html
+++ b/Three Ways/threeways.html
@@ -10,7 +10,7 @@
 <body>
      <div class = "hero">
           <nav>
-               <div class = "logo">Logo</div>
+               <div class = "logo">Internal</div>
                <div class="nav-links">
                     <a href="threeways.html">Home</a>
                     <a href="inline.html">Inline</a>
