--- a/Three Ways/external.html
+++ b/Three Ways/external.html
@@ -12,9 +12,10 @@
           <nav>
                <div class = "logo">External</div>
                <div class="nav-links">
-                    <a href="threeways.html">Home</a>
+                    <a href="internal.html">Internal</a>
                     <a href="inline.html">Inline</a>
                     <a href="external.html">External</a>
+                    <a href="selectors.html">Selectors</a>
                 </div>
           </nav>
           <div class = "hero-content">
