--- a/Three Ways/Internal.html
+++ b/Three Ways/Internal.html
@@ -68,13 +68,13 @@
           <nav>
                <div class = "logo">Internal</div>
                <div class="nav-links">
-                    <a href="threeways.html">Home</a>
+                    <a href="threeways.html">Internal</a>
                     <a href="inline.html">Inline</a>
                     <a href="external.html">External</a>
+                    <a href="selectors.html">Selectors</a>
                 </div>
           </nav>
-          <div class = "hero-content">
-               <h1>Welcome to our Website!</h1>
+          <div class = "hero-content"><h1>Welcome to our Website!</h1>
                <p>hi hehehehe</p>
           </div>
      </div>
