--- a/Three Ways/selectors.html
+++ b/Three Ways/selectors.html
@@ -10,7 +10,7 @@
 <body>
      <div class = "hero">
           <nav>
-               <div class = "logo">Inline</div>
+               <div class = "logo">Selectors</div>
                <div class="nav-links">
                     <a href="internal.html">Internal</a>
                     <a href="inline.html">Inline</a>
