--- a/Three Ways/selectors.html
+++ b/Three Ways/selectors.html
@@ -154,6 +154,7 @@
                     <a href="Internal.html">Internal</a>
                     <a href="external.html">External</a>
                     <a href="inline.html">Inline</a>
+                    <a href="boxcomponents.html">Box Components</a>
                     <a href="selectors.html">Selectors</a>
                </div>
           </nav>
