--- a/Three Ways/inline.html
+++ b/Three Ways/inline.html
@@ -13,8 +13,9 @@
                <div class = "logo">Inline</div>
                <div class="nav-links">
                     <a href="internal.html">Internal</a>
-                    <a href="inline.html">Inline</a>
                     <a href="external.html">External</a>
+                    <a href="inline.html">Inline</a>
+                    <a href="boxcomponents.html">Box Components</a>
                     <a href="selectors.html">Selectors</a>
                 </div>
           </nav>
