--- a/Three Ways/selectors.html
+++ b/Three Ways/selectors.html
@@ -6,14 +6,15 @@
      <title>Selectors</title>
      <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
      <style>
-          * {
-               margin: 0;
-               padding: 0;
+          *{
+               margin: 0px;
+               padding: 0px;
                box-sizing: border-box;
                font-family: 'Poppins', sans-serif;
           }
+
           .hero{
-               height: 200px;
+               height: 100vh;
                background-size: cover;
                background-position: center;
                background-repeat: no-repeat;
