--- a/Three Ways/boxcomponents.html
+++ b/Three Ways/boxcomponents.html
@@ -133,7 +133,7 @@
 <body>
      <div class="hero">
           <nav>
-               <div class="logo">Internal</div>
+               <div class="logo">Box Model</div>
                <div class="nav-links">
                     <a href="Internal.html">Internal</a>
                     <a href="external.html">External</a>
@@ -144,10 +144,10 @@
           </nav>
           <main>
                <div class="main-content">
-                    <h1>Internal CSS Style</h1>
+                    <h1>CSS Box Model</h1>
                     <button>Hover Me</button>
                     <div class="image-container">
-                         <img src="images/InternalSS.png" alt="Image">
+                         <img src="images/BoxModel.png" alt="Image">
                     </div>
                </div>
           </main>
