--- a/Three Ways/boxcomponents.html
+++ b/Three Ways/boxcomponents.html
@@ -60,17 +60,10 @@
                text-decoration: none;
                transition: 0.3s;
                font-size: 20px;
-               padding: 12px 20px;
-               border-radius: 10px;
-               border: 1px solid transparent;
           }
 
           .nav-links a:hover{
-               color:#fff;
-               background-color: rgba(255, 255, 255, 0.15);
-               border-radius: 10px;
-               border: 1px solid rgba(255, 255, 255, 0.3);
-               box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+               color: #ccc;
           }
 
           main {
