--- a/Three Ways/boxcomponents.html
+++ b/Three Ways/boxcomponents.html
@@ -121,6 +121,42 @@
                border: 5px solid #fff;
                margin: 0 auto;
           }
+          footer {
+               width: 100%;
+               padding: 20px;
+               display: flex;
+               justify-content: space-between;
+               align-items: center;
+               background-color: black;
+               position: fixed;
+               bottom: 0;
+               left: 0;
+               z-index: 2;
+               color: white;
+          }
+          footer section {
+               display: flex;
+               align-items: center;
+               gap: 10px;
+          }
+          footer h2, p {
+               color: white;
+          }
+          footer section p {
+               font-style: italic;
+               font-size: 16px;
+               transition: color 0.3s ease-in-out;
+          }
+          footer section:hover p {
+               color: #999;
+               font-weight: bold;
+          }
+          #copyright {
+               background: white;
+               border-radius: 20px;
+               padding: 10px;
+               color: #333;
+          }
      </style>
 </head>
 <body>
