--- a/Three Ways/Internal.html
+++ b/Three Ways/Internal.html
@@ -91,20 +91,24 @@
                max-width: 30%;
                height: auto;
           }
-          /* Type Selector - Styles the footer */
+
+/* Type Selector - Styles the footer */
 footer {
-          width: 100%;
-          padding: 20px;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          background-color: black;
-          position: fixed;
-          bottom: 0;
-          left: 0;
-          z-index: 2;
-          color: white;
-     }
+     width: 100%;
+     padding: 20px;
+     display: flex;
+     flex-direction: column; /* Stacks elements vertically */
+     justify-content: center; /* Centers content vertically */
+     align-items: center; /* Centers content horizontally */
+     background-color: black;
+     position: fixed;
+     bottom: 0;
+     left: 0;
+     z-index: 2;
+     color: white;
+     text-align: center; /* Ensures text alignment */
+}
+
 
      /* Type Selector - Styles sections inside the footer */
      footer section {
@@ -134,7 +138,13 @@ footer {
           border-radius: 20px;
           padding: 10px;
           color: #333;
-     }
+          display: flex; /* Enables flexbox */
+          flex-direction: column; /* Stacks elements vertically */
+          align-items: center; /* Centers content horizontally */
+          justify-content: center; /* Centers content vertically */
+          text-align: center; /* Centers text inside */
+      }
+ 
      </style>
 </head>
 <body>
@@ -161,8 +171,6 @@ footer {
      </div>
      <footer>
           <section>
-              <p>Reach out to us for collaborations and inquiries.</p>
-              <input type="text" placeholder="Your email">
           </section>
           <p id="copyright">&copy; 2025 | Group 6 | BSCS 3-3</p>
      </footer>
