--- a/Three Ways/boxcomponents.html
+++ b/Three Ways/boxcomponents.html
@@ -125,15 +125,18 @@
                width: 100%;
                padding: 20px;
                display: flex;
-               justify-content: space-between;
-               align-items: center;
+               flex-direction: column; /* Stacks elements vertically */
+               justify-content: center; /* Centers content vertically */
+               align-items: center; /* Centers content horizontally */
                background-color: black;
                position: fixed;
                bottom: 0;
                left: 0;
                z-index: 2;
                color: white;
-          }
+               text-align: center; /* Ensures text alignment */
+           }
+           
           footer section {
                display: flex;
                align-items: center;
@@ -183,9 +186,6 @@
      </div>
      <footer>
           <section>
-              <h2>Contact Us</h2>
-              <p>Reach out to us for collaborations and inquiries.</p>
-              <input type="text" placeholder="Your email">
           </section>
           <p id="copyright">&copy; 2025 | Group 6 | BSCS 3-3</p>
      </footer>
