--- a/Three Ways/inline.html
+++ b/Three Ways/inline.html
@@ -6,41 +6,51 @@
     <title>Inline</title>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body style="font-family: 'Poppins', sans-serif; margin: 0; padding: 0; box-sizing: border-box; text-align: center; background-color: #f4f4f4;">
-    <div style="height: 100vh; background-size: cover; background-position: center; background-repeat: no-repeat; border-radius: 5px;">
-        <nav style="width: 100%; padding: 30px; display: flex; justify-content: space-between; align-items: center; background-color: black; position: relative; top: 0; left: 0; z-index: 2;">
-            <div style="color: #fff; font-size: 30px; font-weight: bold;">Inline</div>
-            <div style="display: flex; gap: 30px;">
-                <a href="internal.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">Internal</a>
-                <a href="external.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">External</a>
-                <a href="inline.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">Inline</a>
-                <a href="boxcomponents.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">Box Components</a>
-                <a href="selectors.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">Selectors</a>
-            </div>
-        </nav>
-        <main style="width: 100%; max-width: 1300px; margin: 50px auto; background: rgb(185, 184, 184); padding: 30px; border-radius: 
-                    10px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); text-align: center;">
-            <div>
-                <h1 style="color: #000; font-size: 3em; margin-bottom: 20px; border: 2px; padding: 10px;">Inline CSS Style</h1>
-                <button style="padding: 15px 30px; font-size: 1em; color: #fff; background-color: #000; border: 2px; 
-                              cursor: pointer; transition: background-color 0.3s, transform 0.3s; border-radius: 20px;"
-                              onmouseover="this.style.backgroundColor='#767171'; this.style.transform='scale(1.1)';"
-                              onmouseout="this.style.backgroundColor='#000'; this.style.transform='scale(1)';"> Hover Me
-               </button>
-                <div style="margin-top: 20px; display: flex; justify-content: center;">
-                    <img src="images/InlineSS.jpg" alt="Image" style="max-width: 90%; height: auto;">
-                </div>
-            </div>
-        </main>
-    </div>
-    <footer>
-        <section>
-            <h2>Contact Us</h2>
-            <p>Reach out to us for collaborations and inquiries.</p>
-            <input type="text" placeholder="Your email">
-        </section>
-        <p id="copyright">&copy; 2025 | Group 6 | BSCS 3-3</p>
-    </footer>
-</body>
+<body style="font-family: 'Poppins', sans-serif; margin: 0; padding: 0; box-sizing: border-box; background-color: #f4f4f4;">
 
+    <!-- Navbar (Fixed at the top) -->
+    <nav style="width: 100%; padding: 30px; display: flex; justify-content: space-between; align-items: center; background-color: black; 
+                position: fixed; top: 0; left: 0; z-index: 2;">
+        <div style="color: #fff; font-size: 30px; font-weight: bold;">Inline</div>
+        <div style="display: flex; gap: 30px;">
+            <a href="internal.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">Internal</a>
+            <a href="external.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">External</a>
+            <a href="inline.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">Inline</a>
+            <a href="boxcomponents.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">Box Components</a>
+            <a href="selectors.html" style="color: #fff; text-decoration: none; transition: 0.3s; font-size: 20px;">Selectors</a>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <div style="height: 50vh; display: flex; flex-direction: column; align-items: center; justify-content: center;
+                text-align: center; background: linear-gradient(135deg, #f8f8f8, #e6e6e6); border-radius: 15px;
+                padding: 50px; box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.1); border: 8px solid #ccc;">
+        <h1 style="font-size: 45px; font-weight: bold; color: #333; text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.15);
+                   padding-bottom: 5px; border-bottom: 4px dotted #888;">Inline CSS Style</h1>
+    </div>
+
+    <!-- Main Content -->
+    <main style="width: 100%; max-width: 1300px; margin: 10px auto; background: rgb(185, 184, 184);
+                 padding: 200px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); text-align: center;">
+        <button style="padding: 15px 30px; font-size: 1em; color: #fff; background-color: #000; border: 2px;
+                       cursor: pointer; transition: background-color 0.3s, transform 0.3s; border-radius: 20px;"
+                onmouseover="this.style.backgroundColor='#767171'; this.style.transform='scale(1)';"
+                onmouseout="this.style.backgroundColor='#000'; this.style.transform='scale(1)';">
+            Hover Me
+        </button>
+        <div style="margin-top: 20px; display: flex; justify-content: center;">
+            <img src="images/InlineSS.jpg" alt="Image" style="max-width: 90%; height: auto;">
+        </div>
+    </main>
+
+    <!-- Footer (Fixed at the bottom & Centered) -->
+    <footer style="width: 100%; padding: 20px; display: flex; flex-direction: column; align-items: center;
+                   justify-content: center; background-color: black; position: fixed; bottom: 0; left: 0; z-index: 2;
+                   color: white; text-align: center;">
+        <p style="background: white; border-radius: 20px; padding: 10px; color: #333; text-align: center;">
+            &copy; 2025 | Group 6 | BSCS 3-3
+        </p>
+    </footer>
+
+</body>
 </html>
