--- a/Three Ways/selectors.html
+++ b/Three Ways/selectors.html
@@ -50,7 +50,7 @@
      nav {
           top: 0;
           width: 100%; 
-          padding: 20px;
+          padding: 30px;
           display: flex; 
           justify-content: space-between;
           align-items: center; 
@@ -60,20 +60,25 @@
           z-index: 2; 
      }
 
-     /* Type Selector - Styles the footer */
-     footer {
-          width: 100%;
-          padding: 20px;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          background-color: black;
-          position: fixed;
-          bottom: 0;
-          left: 0;
-          z-index: 2;
-          color: white;
-     }
+
+/* Type Selector - Styles the footer */
+footer {
+     width: 100%;
+     padding: 20px;
+     display: flex;
+     flex-direction: column; /* Stacks elements vertically */
+     justify-content: center; /* Centers content vertically */
+     align-items: center; /* Centers content horizontally */
+     background-color: black;
+     position: fixed;
+     bottom: 0;
+     left: 0;
+     z-index: 2;
+     color: white;
+     text-align: center; /* Ensures text alignment */
+}
+
+
 
      /* Type Selector - Styles sections inside the footer */
      footer section {
@@ -583,8 +588,6 @@
 
      <footer>
         <section>
-            <p>Reach out to us for collaborations and inquiries.</p>
-            <input type="text" placeholder="Your email">
         </section>
         <p id="copyright">&copy; 2025 | Group 6 | BSCS 3-3</p>
      </footer>
